--- a/VocabularyTrainer/src/app/components/login/login.component.html
+++ b/VocabularyTrainer/src/app/components/login/login.component.html
@@ -1,3 +1,25 @@
+<div class="container-fluid text-center">
+  <main class="form-signin">
+    <form>
+     <!-- <img class="mb-4" src="../../../bootstrap-logo.svg" alt="" width="72" height="57">-->
+      <h1 class="h3 mb-3 fw-normal">Please Login</h1>
 
-  <h1>Please login</h1>
+      <div class="form-floating">
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email address</label>
+      </div>
+      <div class="form-floating">
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Password</label>
+      </div>
 
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div>
+      <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
+      <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+    </form>
+  </main>
+</div>
