--- a/VocabularyTrainer/src/app/components/home/home.component.html
+++ b/VocabularyTrainer/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="container-fluid">
+  <div class="row flex-fill">
+    <div class="col counter text-center ">
+      <br><br>
+        <h1 class="m-0px font-w-600 text-danger">Welcome To Vocabulary Trainer</h1><br>
+    </div>
+  </div>
+</div>
