--- a/VocabularyTrainer/src/app/components/login/login.component.css
+++ b/VocabularyTrainer/src/app/components/login/login.component.css
@@ -28,12 +28,10 @@ html,
 
 .form-signin input[type="email"] {
   margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+  border-radius: 5px;
 }
 
 .form-signin input[type="password"] {
   margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+  border-radius: 5px;
 }
