--- a/VocabularyTrainer/src/app/components/login/login.component.html
+++ b/VocabularyTrainer/src/app/components/login/login.component.html
@@ -1,25 +1,34 @@
-<div class="container-fluid text-center">
-  <main class="form-signin">
-    <form>
-     <!-- <img class="mb-4" src="../../../bootstrap-logo.svg" alt="" width="72" height="57">-->
-      <h1 class="h3 mb-3 fw-normal">Please Login</h1>
 
-      <div class="form-floating">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-        <label for="floatingInput">Email address</label>
-      </div>
-      <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">Password</label>
-      </div>
+<div class="container-fluid justify-content-center">
+  <div class="row  w-100">
+    <div class="clo text-center">
+      <main class="form-signin">
+        <br><br><br><br>
+        <form>
+          <!-- <img class="mb-4" src="../../../bootstrap-logo.svg" alt="" width="72" height="57">-->
+          <h1 class="h3 mb-5 fw-normal">Please Login</h1>
 
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-      </div>
-      <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
-      <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
-    </form>
-  </main>
+          <div class="form-floating mb-3">
+            <input type="email" class="form-control " id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Email address</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <label for="floatingPassword">Password</label>
+          </div>
+          <div class="row text-start ">
+            <div class="checkbox mb-3 ms-1">
+              <label>
+                <input type="checkbox" value="remember-me"> Remember me
+              </label>
+            </div>
+          </div>
+
+          <button class="w-100 btn btn-lg btn-primary" type="button">Login</button>
+          <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+        </form>
+        <br><br><br>
+      </main>
+    </div>
+  </div>
 </div>
