--- a/VocabularyTrainer/src/app/components/register/register.component.css
+++ b/VocabularyTrainer/src/app/components/register/register.component.css
@@ -10,21 +10,21 @@
   padding-bottom: 40px;
   background-color: #f5f5f5;
 }
-#wrap{
+/*#wrap{
   background-image: -ms-linear-gradient(top, #FFFFFF 0%, #D3D8E8 100%);
-  /* Mozilla Firefox */
+  !* Mozilla Firefox *!
   background-image: -moz-linear-gradient(top, #FFFFFF 0%, #D3D8E8 100%);
-  /* Opera */
+  !* Opera *!
   background-image: -o-linear-gradient(top, #FFFFFF 0%, #D3D8E8 100%);
-  /* Webkit (Safari/Chrome 10) */
+  !* Webkit (Safari/Chrome 10) *!
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #D3D8E8));
-  /* Webkit (Chrome 11+) */
+  !* Webkit (Chrome 11+) *!
   background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #D3D8E8 100%);
-  /* W3C Markup, IE10 Release Preview */
+  !* W3C Markup, IE10 Release Preview *!
   background-image: linear-gradient(to bottom, #FFFFFF 0%, #D3D8E8 100%);
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
+}*/
 legend{
   color:#141823;
   font-size:25px;
