--- a/VocabularyTrainer/src/app/components/header/header.component.html
+++ b/VocabularyTrainer/src/app/components/header/header.component.html
@@ -15,10 +15,10 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  routerLinkActive="active">Word list</a>
+          <a class="nav-link" routerLink="/wordlist" routerLinkActive="active">Word list</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  routerLinkActive="active">Training</a>
+          <a class="nav-link" routerLink="/training" routerLinkActive="active">Training</a>
         </li>
       </ul>
       <ul class="navbar-nav me-3 align-content-end">
