--- a/VocabularyTrainer/src/app/components/register/register.component.html
+++ b/VocabularyTrainer/src/app/components/register/register.component.html
@@ -25,13 +25,15 @@
               <option value="02">Feb</option>
               <option value="11">Nov</option>
               <option value="12">Dec</option>
-            </select>                        </div>
+            </select>
+          </div>
           <div class="col-xs-4 col-md-4">
             <select name="day" class = "form-control input-lg">
               <option value="29">29</option>
               <option value="30">30</option>
               <option value="31">31</option>
-            </select>                        </div>
+            </select>
+          </div>
           <div class="col-xs-4 col-md-4">
             <select name="year" class = "form-control input-lg">
               <option value="1935">1900</option>
@@ -39,7 +41,8 @@
               <option value="2011">2011</option>
               <option value="2012">2012</option>
               <option value="2013">2021</option>
-            </select>                        </div>
+            </select>
+          </div>
         </div>
         <label>Gender : </label>
         <label class="radio-inline ms-2">
