--- a/VocabularyTrainer/src/app/components/wordlist/wordlist.component.html
+++ b/VocabularyTrainer/src/app/components/wordlist/wordlist.component.html
@@ -81,7 +81,6 @@
 
     <div class="col " id="tableView">
 
-
       <div class="row bg-light " >
         <label style="margin-bottom: 7px" for="tableView" class="display-6 bg-light ">Word List:</label>
       </div>
@@ -91,10 +90,12 @@
           <table class="table table-striped table-light " >
             <thead>
             <tr>
-              <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
+              <th scope="col">Id</th>
+              <th scope="col">Word</th>
+              <th scope="col">English meaning</th>
+              <th scope="col">Farsi meaning</th>
+              <th scope="col">Fluence</th>
+              <th scope="col">Explanation</th>
             </tr>
             </thead>
             <tbody>
