--- a/VocabularyTrainer/src/app/components/wordlist/wordlist.component.html
+++ b/VocabularyTrainer/src/app/components/wordlist/wordlist.component.html
@@ -10,7 +10,7 @@
 
       <!-- Database section -->
 
-      <div class="row " >
+      <form class="row g-4 gy-2 gx-3 align-items-center " >
         <label style="margin-bottom: 7px" for="databaseForm" class="display-6 bg-success">Database:</label>
 
         <div class="row mt-2 " id="databaseForm" >
@@ -38,11 +38,11 @@
           <input type="text" name="dbName" value="" class="form-control input-lg w-auto" placeholder="Word list name"/>
         </div>
 
-      </div> <hr>
+      </form> <hr>
 
       <!-- Word section -->
 
-      <div class="row ">
+      <form class="row g-4 gy-2 gx-3 align-items-center">
         <label style="margin-bottom: 7px" for="wordForm" class="display-6 bg-warning">Word:</label>
 
         <div class="row mt-2" id="wordForm">
@@ -65,13 +65,13 @@
           <textarea class="form-control ms-3 mt-3" rows="5" id="comment" placeholder="Write your explanation here..."></textarea>
         </div>
 
-      </div><hr>
+      </form><hr>
 
       <!-- Buttons section -->
 
       <div class="row ">
         <div class="col" >
-          <button class="btn btn-success w-100" type="button">Add</button>
+          <button class="btn btn-success w-100" type="submit">Add</button>
         </div>
       </div>
 
