--- a/VocabularyTrainer/src/app/components/wordtraining/wordtraining.component.html
+++ b/VocabularyTrainer/src/app/components/wordtraining/wordtraining.component.html
@@ -1,1 +1,13 @@
-<p>wordtraining works!</p>
+
+<form >
+<div class="row form-control">
+  <div class="col-md-6">
+    <label for="word" class="mt-3" >Word</label>
+    <input  [(ngModel)]="word" type="text" name="word" class="form-control" id="word">
+    <label for="englishMeaning" class="mt-3">English Meaning</label>
+    <input  [(ngModel)]="englishMeaning" type="text" name="englishMeaning" class="form-control" id="englishMeaning">
+    <button class="btn btn-success mt-3" type="button"
+            (click)="onCreatePost({word,englishMeaning})">Submit</button>
+  </div>
+</div>
+</form>
