--- a/VocabularyTrainer/src/app/components/wordtraining/wordtraining.component.html
+++ b/VocabularyTrainer/src/app/components/wordtraining/wordtraining.component.html
@@ -1,13 +1,36 @@
+<div class="container">
+  <div class="row mt-3">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
 
-<form >
-<div class="row form-control">
-  <div class="col-md-6">
-    <label for="word" class="mt-3" >Word</label>
-    <input  [(ngModel)]="word" type="text" name="word" class="form-control" id="word">
-    <label for="englishMeaning" class="mt-3">English Meaning</label>
-    <input  [(ngModel)]="englishMeaning" type="text" name="englishMeaning" class="form-control" id="englishMeaning">
-    <button class="btn btn-success mt-3" type="button"
-            (click)="onCreatePost({word,englishMeaning})">Submit</button>
+      <form #postForm="ngForm" (ngSubmit)="onCreatePost(postForm.value)">
+
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input type="text" class="form-control" id="title" required ngModel name="title"/>
+        </div>
+
+        <div class="form-group mt-3">
+          <label for="content">Content</label>
+          <textarea class="form-control" id="content" required ngModel name="content"></textarea>
+        </div>
+        <button class="btn btn-primary mt-3" type="submit" [disabled]="!postForm.valid">Send Post</button>
+      </form>
+
+    </div>
+  </div>
+  <hr />
+
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+      <button class="btn btn-primary" (click)="onFetchPosts()">Fetch Posts</button>
+      |
+      <button class="btn btn-danger" [disabled]="loadedPosts.length < 1" (click)="onClearPosts()">Clear Posts</button>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+      <p>No posts available!</p>
+    </div>
   </div>
 </div>
-</form>
