--- a/VocabularyTrainer/src/app/components/wordtraining/wordtraining.component.html
+++ b/VocabularyTrainer/src/app/components/wordtraining/wordtraining.component.html
@@ -30,7 +30,14 @@
 
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <p>No posts available!</p>
+      <p *ngIf="loadedPosts.length < 1 && !isFetching">No posts available!</p>
+      <ul class="list-group mt-3" *ngIf="loadedPosts.length >=1 && !isFetching">
+        <li class="list-group-item" *ngFor="let post of loadedPosts">
+          <h1>{{post.word}}</h1>
+          <p>{{post.englishMeaning}}</p>
+        </li>
+      </ul>
+      <p *ngIf="isFetching">Loading...</p>
     </div>
   </div>
 </div>
