--- a/VocabularyTrainer/src/app/components/wordtraining/wordtraining.component.html
+++ b/VocabularyTrainer/src/app/components/wordtraining/wordtraining.component.html
@@ -2,7 +2,7 @@
   <div class="row mt-3">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
 
-      <form #postForm="ngForm" (ngSubmit)="onCreatePost(postForm.value)">
+      <form #postForm="ngForm" name="postForm" (ngSubmit)="onCreatePost(postForm.value)">
 
         <div class="form-group">
           <label for="word">Word</label>
